log

Sat 16 Mar 2024 08:10:03 PM UTC: 
 tests:  0|7
total_score: 0/70
1206b1d
Sat 16 Mar 2024 08:10:55 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
2595815
Sat 16 Mar 2024 08:11:29 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c0201a4
Sat 16 Mar 2024 08:12:27 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
32a8ebb
Sat 16 Mar 2024 08:12:50 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Sat 16 Mar 2024 08:14:14 PM UTC: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7e752a2
Sat 16 Mar 2024 08:15:09 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:103:1: error: control reaches end of non-void function [-Werror=return-type]
  103 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
84c637f
Sat 16 Mar 2024 08:15:29 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 20/70
6babd6f
Sat 16 Mar 2024 08:16:00 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
b8485ae
Sat 16 Mar 2024 08:17:31 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
b662b96
Sat 16 Mar 2024 08:22:54 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
8cc37c6
Sat 16 Mar 2024 08:34:18 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
Sat 16 Mar 2024 08:35:09 PM UTC: 
 exercises.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
92e4af1
Sat 16 Mar 2024 08:35:41 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 30/70
f85781f
Sat 16 Mar 2024 08:37:52 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4f92724
Sat 16 Mar 2024 08:40:37 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Sat 16 Mar 2024 08:44:00 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Sat 16 Mar 2024 08:48:16 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Sat 16 Mar 2024 08:50:18 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 30/70
d0082eb
Sat 16 Mar 2024 08:53:41 PM UTC: 
 exercises.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  0|4
total_score: 30/70
621e1a7
Sat 16 Mar 2024 09:04:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
4f9eacc
Sat 16 Mar 2024 09:09:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:72:28: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
   72 |       if(arr1[i] < arr2[j] && i < size1 || j < size2)
      |          ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d15206a
Sat 16 Mar 2024 09:10:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
0222c75
Sat 16 Mar 2024 09:11:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
328a09e
Sat 16 Mar 2024 09:18:42 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:98:3: error: expected ‘,’ or ‘;’ before ‘for’
   98 |   for(int i = 0; i < size; i++)
      |   ^~~
exercises.c:98:18: error: ‘i’ undeclared (first use in this function)
   98 |   for(int i = 0; i < size; i++)
      |                  ^
exercises.c:98:18: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:98:31: error: expected ‘;’ before ‘)’ token
   98 |   for(int i = 0; i < size; i++)
      |                               ^
      |                               ;
exercises.c:98:31: error: expected statement before ‘)’ token
exercises.c:97:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   97 |   int temp = 0
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
1dba90e
Sat 16 Mar 2024 09:18:59 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|2
total_score: 50/70
ed30278
Sat 16 Mar 2024 09:28:49 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:104:10: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  104 |     else if(arr[i] > arr[i + 1])
      |          ^~
exercises.c:106:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  106 |       j++;
      |       ^
exercises.c:108:5: error: ‘else’ without a previous ‘if’
  108 |     else if(j == size && k == 0)
      |     ^~~~
exercises.c:111:28: error: lvalue required as left operand of assignment
  111 |     else if(j == size && k = size)
      |                            ^
cc1: all warnings being treated as errors
Compilation failed
b2f7af9
Sat 16 Mar 2024 09:29:25 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:113:28: error: lvalue required as left operand of assignment
  113 |     else if(j == size && k = size)
      |                            ^
Compilation failed
d89e783
Sat 16 Mar 2024 09:29:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
7e886e3
Sat 16 Mar 2024 09:31:28 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|2
total_score: 50/70
e992a0d
Sat 16 Mar 2024 09:32:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
2182c69
Sat 16 Mar 2024 09:32:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Sat 16 Mar 2024 09:32:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
a8da20d
Sat 16 Mar 2024 09:33:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
9e0c95c
Sat 16 Mar 2024 09:34:45 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|2
total_score: 50/70
314e1a8
Sat 16 Mar 2024 09:38:45 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
653778b
Sat 16 Mar 2024 09:39:40 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
  119 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9e5623f
Sat 16 Mar 2024 09:41:39 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:121:1: error: control reaches end of non-void function [-Werror=return-type]
  121 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d2e6653
Sat 16 Mar 2024 09:42:48 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
c0a35d1
Sat 16 Mar 2024 09:49:35 PM UTC: 
 exercises.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  0|2
total_score: 50/70
a5e1a0b
Sat 16 Mar 2024 09:50:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
25529a4
Sat 16 Mar 2024 09:50:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
308e879
Sat 16 Mar 2024 09:51:30 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:109:3: error: ‘else’ without a previous ‘if’
  109 |   else if(j == size - 1)
      |   ^~~~
Compilation failed
27e0dde
Sat 16 Mar 2024 09:51:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
88e8692
Sat 16 Mar 2024 09:54:00 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|2
total_score: 50/70
e78a7ef
Sat 16 Mar 2024 09:57:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
440c381
Sat 16 Mar 2024 09:59:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
7ad3903
